# uot-bench

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  environment.conda.yaml  index.html  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  typecheck.yml
api/data/: index.html
api/experiments/: index.html
api/interop_ott/: index.html
api/problems/: index.html
api/solvers/: index.html
api/uot/: index.html
api/utils/: index.html
changelog/: index.html
cli/: index.html
cli/benchmark/: index.html
cli/color-transfer/: index.html
cli/mnist/: index.html
cli/serialize/: index.html
cli/slurm/: index.html
configs/color_transfer/: adobe.yaml  example.yaml
contributing/: index.html
dashboard/: .env.example  app.py  color_transfer.ipynb  color_transfer_data_loader.py  dataset.py
dashboard/assets/: color_transfer.css
dashboard/callbacks/: __init__.py  accuracy_vs_regularization.py  accuracy_vs_size.py  bfm_cost_difference.py  bfm_heatmap_utils.py  bfm_monge_core_heatmap.py  bfm_monge_heatmap.py  bfm_monge_summary.py  bfm_performance_summary.py  bfm_stepsize_heatmap.py  bfm_summary_table.py  bfm_tv_vs_size.py  bfm_violin_grid.py  color_transfer_stats.py  cost_rerr_vs_size_box.py  distribution_sensivity.py  home_coverage_matrix.py  runtime_per_reg_scatterline.py
dashboard/color_transfer/: __init__.py  config.py  options.py  showcase_helpers.py  state.py  stats.py
dashboard/components/: filters.py
dashboard/pages/: back_and_forth.py  color_transfer.py  color_transfer_stats.py  descriptive.py  home.py
dashboard/tests/: test_color_transfer.py
dashboard/utils/: bfm.py  filters.py
docs/: extending.md  generators.md  index.md  install.md  problems.md  quickstart.md
docs/api/: data.md  experiments.md  interop_ott.md  problems.md  solvers.md  uot.md  utils.md
docs/cli/: benchmark.md  color-transfer.md  index.md  mnist.md  serialize.md  slurm.md
docs/guide/: concepts.md  custom-generator.md  custom-problem.md  custom-solver.md  experiments.md  hooks.md  measures.md  ott-interop.md
guide/concepts/: index.html
guide/custom-generator/: index.html
guide/custom-problem/: index.html
guide/custom-solver/: index.html
guide/experiments/: index.html
guide/hooks/: index.html
guide/measures/: index.html
guide/ott-interop/: index.html
install/: index.html
notebooks/: back_and_forth_stepsize.ipynb  barycenter_back_and_forth.ipynb  barycenter_back_and_forth_1d.ipynb  barycenter_back_and_forth_ring_diamond_square.ipynb  barycenter_compare_gaussians.ipynb  barycenter_compare_methods.ipynb  barycenter_pdlp.ipynb  barycenter_sinkhorn.ipynb  barycenter_sinkhorn_examples.ipynb  bfm_ma_residual_benchmark.ipynb  convolutional_barycenter_demo.ipynb  gaussian_analytic_cost_comparison.ipynb  gaussian_generator_plotly_slider.ipynb  generators_reproducibility.ipynb  gradient_ascent.ipynb  handwritten_image_solver_comparison.ipynb  ott_interop_benchmark.ipynb  sinkhorn_divergence_lp_validation.ipynb
notebooks/barycenter_examples/: barycenter_icons.ipynb  entropic_barycenter_1d_jax_cuda.ipynb  entropic_barycenter_2d.ipynb  entropic_barycenter_2d_jax.ipynb  entropic_barycenter_2d_jax_cuda.ipynb  interpolation_pushforward.ipynb  method_comparison.ipynb  method_comparison_debug.ipynb
playground/: gradient.py  lbfgs.py  saga.py  sinkhorn_jax_ott.py
quickstart/: index.html
scripts/: run_benchmark.sh  run_benchmark_hdf5.sh  run_benchmark_online.sh  run_color_transfer.sh
search/: search_index.json
tests/: conftest.py  test_color_transfer.py  test_data.py  test_experiments.py  test_gaussian_mixture_barycenter_generator.py  test_gaussian_mixture_generator.py  test_hdf5_store.py  test_problems.py  test_problems_exponential_generator.py  test_solvers.py  test_toy_barycenter_generator.py  test_utils_generator_to_weights_list.py  test_utils_instantiate_solver.py
tests/interop/: test_ott_adapter.py
tests/problems/: test_multi_marginal.py
uot/: __init__.py
(+111 files in other folders)
