[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uot_bench"
version = "0.1.9"
description = "Utilities for optimal transport algorithms and benchmarking"
readme = "README.md"
authors = [
    { name = "Ivan Zhytkevych", email = "aipyth.func@gmail.com" },
    { name = "Denys Ruban", email = "denislolipop48@gmail.com" },
    { name = "Maksym-Vasyl Tarnavskyi", email = "tarnavskyi.pn@ucu.edu.ua" },
    { name = "Maksym Zhuk", email = "zhuk.pn@ucu.edu.ua" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "POT",
    "PyYAML",
    "chex",
    "jax",
    "jaxopt",
    "numpy",
    "optax",
    "pandas",
    "scipy",
    "toolz",
    "tqdm",
]

[project.scripts]
uot-serialize            = "uot.problems.problem_serializer:main"
uot-benchmark            = "uot.experiments.synthetic.benchmark:main"
uot-color-transfer       = "uot.experiments.real_data.color_transfer.color_transfer:main"
uot-color-transfer-viz   = "uot.experiments.real_data.color_transfer.visualization:main"
uot-mnist-distances      = "uot.experiments.real_data.mnist_classification.count_pairwise_distances:main"
uot-mnist-classification = "uot.experiments.real_data.mnist_classification.mnist_classification:main"
uot-inspect-store        = "uot.problems.inspect_store:main"

[project.urls]
Homepage = "https://ai-quantum-research-group.github.io/uot-bench/"
Repository = "https://github.com/AI-Quantum-Research-Group/uot-bench"
Issues = "https://github.com/AI-Quantum-Research-Group/uot-bench/issues"
Documentation = "https://ai-quantum-research-group.github.io/uot-bench/"

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]",
]
storage = [
    "h5py",
]
profiling = [
    "gpu-tracker",
]
mnist = [
    "scikit-learn",
]
color-transfer = [
    "dash",
    "opencv-python",
    "Pillow",
    "scikit-image",
    "plotly",
    "matplotlib",
]
image-analysis = [
    "Pillow",
    "scikit-image",
    "matplotlib",
    "seaborn",
    "dataframe-image",
    "ipython",
]
viz = [
    "matplotlib",
    "plotly",
    "seaborn",
    "dataframe-image",
    "ipython",
]
gurobi = [
    "gurobipy",
]
testing = [
    "pytest>=7.0",
]
lint = [
    "black>=23.3.0",
    "ruff>=0.4.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "coverage",
    "black>=23.3.0",
    "ruff>=0.4.1",
    "pyright",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
all = [
    "h5py",
    "gpu-tracker",
    "scikit-learn",
    "Pillow",
    "scikit-image",
    "matplotlib",
    "plotly",
    "seaborn",
    "dataframe-image",
    "ipython",
    "dash",
    "opencv-python",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uot*"]

[tool.setuptools.package-data]
"uot" = ["py.typed"]
"uot.assets.toy_shapes" = ["*.png", "*.jpg", "*.jpeg", "*.webp"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --disable-warnings -q"
testpaths = ["tests"]

[tool.black]
line-length = 80
target-version = ['py311']

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
ignore = ["I001", "E402"]

[tool.pyright]
include = ["uot"]
exclude = [
    "uot/algorithms",
    "uot/solvers/pdlp_bary",
]
typeCheckingMode = "standard"
pythonVersion = "3.11"
reportMissingTypeStubs = "warning"
